[package]
name = "the_book"
version = "0.1.0"
authors = ["k_higuchi <koyohiguchi7788@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "1"
path = "src/01_hello_world/main.rs"

[[bin]]
name = "2"
path = "src/02_guessing_game/main.rs"

[[bin]]
name = "3"
path = "src/03_common_concepts/main.rs"

[[bin]]
name = "4"
path = "src/04_ownership/main.rs"

[[bin]]
name = "5"
path = "src/05_struct/main.rs"

[[bin]]
name = "6"
path = "src/06_enums/main.rs"

[[bin]]
name = "7"
path = "src/07_package/main.rs"

[[bin]]
name = "8"
path = "src/08_collections/main.rs"

[dependencies]
rand = "0.6.0"