[package]
name = "add-one"
version = "0.1.0"
authors = ["k_higuchi <koyohiguchi7788@gmail.com>"]
edition = "2018"
description = "just for leaning"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
